--- a/index.html
+++ b/index.html
@@ -157,8 +157,37 @@
                     </div>
                 </div>
             </div>
+            
         </section>
+        <div class="download-cv">
+            <button class="btn-primary">Download CV</button>
+        </div>
+        
     </main>
+    <footer>
+        <div class="footer-column">
+            <h3 class="section-title">Lets Connect</h3>
+            <p class="section-describsition">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="socal-link">
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+            </div>
+
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">Let's Message me</h3>
+            <form action="" class="contact">
+                <input type="text" name="" id="" placeholder="your name">
+                <br>
+                <input type="email" name="" id="" placeholder="your email">
+                <br>
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <br>
+                <button class="btn-primary">Submit</button>
+            </form>
+        </div>
+    </footer>
     <footer>
 
     </footer>
